--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@types/geoip-lite": "^1.4.4",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "geoip-lite": "^1.4.10",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.344.0",
     "nodemailer": "^6.9.15",
     "react": "^18.3.1",
@@ -33,6 +34,7 @@
     "@types/compression": "^1.7.5",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20.10.0",
     "@types/nodemailer": "^6.4.14",
     "@types/react": "^18.3.5",
